2005-06-29 Alain Magloire
	Patch From Chris Wiebe fix PR 101386
	* utils/org/eclipse/cdt/utils/macho/MachO.java

2005-06-26 Vladimir Hirsl
	Fix for 101344: problem markers are not being removed from header files
	Fixed removing indexer problem markers originally created by indexing 
	header files not included by any source files.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/AbstractIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java

2005-06-25 Alain Magloire
	Fix PR 91069: BinaryRunner search improvements from Chris Wiebe.
	* model/org/eclipse/cdt/internal/core/model/BinaryRunner.java

2005-06-25 Alain Magloire
	Fix PR 98788: Dealing with templates
	* model/org/eclipse/cdt/core/model/ICElement.java
	+ model/org/eclipse/cdt/core/model/IFunctionTemplate.java
	+ model/org/eclipse/cdt/core/model/IFunctionTemplateDeclaration.java
	+ model/org/eclipse/cdt/core/model/IMethodTemplate.java
	+ model/org/eclipse/cdt/core/model/IMethodTemplateDeclaration.java
	+ model/org/eclipse/cdt/core/model/IStructureTemplate.java
	+ model/org/eclipse/cdt/core/model/IStructureTemplateDeclaration.java
	* model/org/eclipse/cdt/core/model/ITemplate.java

	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java
	* model/org/eclipse/cdt/internal/core/model/Funtion.java
	* model/org/eclipse/cdt/internal/core/model/FunctionTemplate.java
	* model/org/eclipse/cdt/internal/core/model/Method.java
	* model/org/eclipse/cdt/internal/core/model/MethodTemplate.java
	+ model/org/eclipse/cdt/internal/core/model/MethodTemplateDeclaration.java
	* model/org/eclipse/cdt/internal/core/model/StructureTemplate.java
	+ model/org/eclipse/cdt/internal/core/model/StructureTemplateDeclaration.java
	* model/org/eclipse/cdt/internal/core/model/Template.java

2005-06-22 Vladimir Hirsl
	Fix for PR 93573: "[Indexer] endl references are not added to the DOM index"